golang-gin/templates/openshift-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: { { include "golang-gin.fullname" . } }
  labels: { { - include "golang-gin.labels" . | nindent 4 } }
spec:
  to:
    kind: Service
    name: { { include "golang-gin.fullname" . } }
    weight: 100
  port:
    targetPort: { { .Values.service.port } }
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
